tests/langs/snapshots/r#mod__langs__base.cs_property.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 39
  l: "        public ref readonly TestStatus Status => ref _status;\n"
  m: "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 147
  l: "        public int Iterations { get; }\n"
  m: "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
