tests/langs/snapshots/r#mod__langs__base.go_comments.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 1
  l: "// package_test demonstrates various Go language features in the context of software testing\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 4
  l: "// Different ways of importing\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 17
  l: "// Constants demonstration\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 24
  l: "// Iota demonstration\n"
  m: "^^^^^^^^^^^^^^^^^^^^^  "
- n: 31
  l: "// Custom error type\n"
  m: "^^^^^^^^^^^^^^^^^^^^  "
- n: 40
  l: "// Interface demonstration\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 45
  l: "// Struct demonstration\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 50
  l: "\tunequal  bool        // Unexported field\n"
  m: "                       ^^^^^^^^^^^^^^^^^^^  "
- n: 53
  l: "// Embedded struct\n"
  m: "^^^^^^^^^^^^^^^^^^  "
- n: 59
  l: "// Function type\n"
  m: "^^^^^^^^^^^^^^^^  "
- n: 62
  l: "// Map type\n"
  m: "^^^^^^^^^^^  "
- n: 65
  l: "// Channel type\n"
  m: "^^^^^^^^^^^^^^^  "
- n: 68
  l: "// Slice type\n"
  m: "^^^^^^^^^^^^^  "
- n: 71
  l: "// Array type\n"
  m: "^^^^^^^^^^^^^  "
- n: 74
  l: "// Pointer type\n"
  m: "^^^^^^^^^^^^^^^  "
- n: 77
  l: "// Generic type\n"
  m: "^^^^^^^^^^^^^^^  "
- n: 83
  l: "// Generic function\n"
  m: "^^^^^^^^^^^^^^^^^^^  "
- n: 91
  l: "// Method declaration\n"
  m: "^^^^^^^^^^^^^^^^^^^^^  "
- n: 93
  l: "\t// Method implementation\n"
  m: "  ^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 96
  l: "// Function declaration with variadic parameter\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 103
  l: "// Main test function\n"
  m: "^^^^^^^^^^^^^^^^^^^^^  "
- n: 105
  l: "\t// Setup\n"
  m: "  ^^^^^^^^  "
- n: 107
  l: "\t\t// Defer statement\n"
  m: "    ^^^^^^^^^^^^^^^^^^  "
- n: 111
  l: "\t// Run tests\n"
  m: "  ^^^^^^^^^^^^  "
- n: 115
  l: "// Sample test function\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 117
  l: "\t// Short variable declaration\n"
  m: "  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 120
  l: "\t// If statement\n"
  m: "  ^^^^^^^^^^^^^^^  "
- n: 127
  l: "\t// Switch statement\n"
  m: "  ^^^^^^^^^^^^^^^^^^^  "
- n: 137
  l: "\t// For loop\n"
  m: "  ^^^^^^^^^^^  "
- n: 143
  l: "\t// Assert\n"
  m: "  ^^^^^^^^^  "
- n: 148
  l: "\t// Goroutine and channel usage\n"
  m: "  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 153
  l: "\t// Select statement\n"
  m: "  ^^^^^^^^^^^^^^^^^^^  "
- n: 161
  l: "\t// Panic and recover\n"
  m: "  ^^^^^^^^^^^^^^^^^^^^  "
- n: 168
  l: "\t// Intentional panic\n"
  m: "  ^^^^^^^^^^^^^^^^^^^^  "
- n: 174
  l: "// Benchmark function\n"
  m: "^^^^^^^^^^^^^^^^^^^^^  "
- n: 181
  l: "// Example function\n"
  m: "^^^^^^^^^^^^^^^^^^^  "
- n: 185
  l: "\t// Output: Running test case: example\n"
  m: "  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 188
  l: "// Type assertion and type switch\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 205
  l: "// Closure\n"
  m: "^^^^^^^^^^  "
- n: 212
  l: "// Complex numbers\n"
  m: "^^^^^^^^^^^^^^^^^^  "
- n: 215
  l: "// Rune and string literals\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 222
  l: "// Bit operations\n"
  m: "^^^^^^^^^^^^^^^^^  "
- n: 229
  l: "// Mutex usage\n"
  m: "^^^^^^^^^^^^^^  "
- n: 235
  l: "// Context usage\n"
  m: "^^^^^^^^^^^^^^^^  "
- n: 245
  l: "// Reflection usage\n"
  m: "^^^^^^^^^^^^^^^^^^^  "
- n: 251
  l: "// Unsafe pointer usage (use with caution)\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 258
  l: "// Init function\n"
  m: "^^^^^^^^^^^^^^^^  "
- n: 263
  l: "// Main function (uncomment if using as a standalone program)\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 264
  l: "// func main() {\n"
  m: "^^^^^^^^^^^^^^^^  "
- n: 265
  l: "// \tfmt.Println(\"Running tests...\")\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 266
  l: "// \ttesting.Main(func(pat, str string) (bool, error) { return true, nil },\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 267
  l: "// \t\t[]testing.InternalTest{{Name: \"TestSample\", F: TestSample}},\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 268
  l: "// \t\t[]testing.InternalBenchmark{{Name: \"BenchmarkSample\", F: BenchmarkSample}},\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 269
  l: "// \t\t[]testing.InternalExample{{Name: \"ExampleTestCase_Run\", F: ExampleTestCase_Run}})\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 270
  l: "// }\n"
  m: "^^^^  "
- n: 272
  l: "// Fallthrough demonstration\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 286
  l: "// Label and goto demonstration\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 296
  l: "// ... (end of file)\n"
  m: "^^^^^^^^^^^^^^^^^^^^  "
- n: 298
  l: "/*\n"
  m: ^^^^
- n: 299
  l: "\tA multi-line comment\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^
- n: 300
  l: "\tspanning multiple lines.\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 301
  l: "*/\n"
  m: "^^  "
