tests/langs/snapshots/r#mod__langs__base.go_goto.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 292
  l: "\t\tgoto Loop\n"
  m: "    ^^^^^^^^^  "
