tests/langs/snapshots/r#mod__langs__base.go_interface_tTest.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 41
  l: "type Testable interface {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 42
  l: "\tTest() bool\n"
  m: ^^^^^^^^^^^^^^^
- n: 43
  l: "}\n"
  m: "^  "
